<resources>

    <string-array name="dollar_short">
        <item>USD</item>
        <item>HKD</item>
        <item>GBP</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>SGD</item>
        <item>CHF</item>
        <item>JPY</item>
        <item>ZAR</item>
        <item>SEK</item>
        <item>NZD</item>
        <item>THB</item>
        <item>PHP</item>
        <item>IDR</item>
        <item>EUR</item>
        <item>KRW</item>
        <item>VND</item>
        <item>MYR</item>
        <item>CNY</item>
    </string-array>
    <string-array name="dollar">
        <item>美元</item>
        <item>港幣</item>
        <item>英鎊</item>
        <item>澳幣</item>
        <item>加拿大幣</item>
        <item>新加坡幣</item>
        <item>瑞士法郎</item>
        <item>日圓</item>
        <item>南非幣</item>
        <item>瑞典幣</item>
        <item>紐元</item>
        <item>泰幣</item>
        <item>菲國比索</item>
        <item>印尼幣</item>
        <item>歐元</item>
        <item>韓元</item>
        <item>越南盾</item>
        <item>馬來幣</item>
        <item>人民幣</item>
    </string-array>

    <string name="app_name">匯率兌換</string>
    <string name="title_activity_main">匯率兌換</string>
    <string name="title_yahoo">各銀行%s兌換匯率</string>
    <string name="nr">幣別</string>
    <string name="rate_buy_cash">現金買入</string>
    <string name="rate_sell_cash">現金賣出</string>
    <string name="rate_buy_spot">即期買入</string>
    <string name="rate_sell_spot">即期賣出</string>
    <string name="update">立即更新</string>
    <string name="update1">更新</string>
    <string name="last_update_tag">更新時間</string>
    <string name="UpdateError">無法更新</string>
    <string name="UpdateFinish">更新完成</string>
    <string name="dialog_title_wait">請稍後</string>
    <string name="dialog_body_update">更新資料中&#8230;</string>
    <string name="dialog_body_search">查詢各家銀行[%s]匯率中&#8230;</string>
    <string name="banklist">金融機構</string>
    <string name="cash_sell">現金賣出</string>
    <string name="cash_buy">現金買進</string>
    <string name="enable_auto_update">啟動自動更新</string>
    <string name="disable_autoupdate">取消自動更新</string>
    <string name="msg_no_find">查無%s資料 </string>
    <string name="no_connect">無網路連線</string>

</resources>